sort.basic.cocktail.AlgCocktailSort1.scala.error
Erreur de compilation :
AlgCocktailSort1:10: error: not found: value pos1
        echange(pos1,pos2)
                ^AlgCocktailSort1:10: error: not found: value pos2
        echange(pos1,pos2)
                     ^AlgCocktailSort1:19: error: not found: value pos1
        echange(pos1,pos2)
                ^AlgCocktailSort1:19: error: not found: value pos2
        echange(pos1,pos2)
                     ^