sort.basic.cocktail.AlgCocktailSort1.scala.code
def cocktailSort() {
  var lgr=getNombreValeurs()
  var stop=false
  
  while(stop!=true){
    
    for (i<-0 to lgr-2){
      if (plusPetit(i,i+1)){
        echange(pos1,pos2)
        stop=false
      }else{
        stop=true
      }
    }

    for (i<-lgr-2 to 0 by -1){
      if (plusPetit(i+1,i)){
        echange(pos1,pos2)
        stop=false
      }else{
        stop=true
      }
    }
  }
}